[lworld] Scalarization does not properly handle speculative types

XMLWordPrintable

      As a result TestNullableInlinesTypes.java fails with "-DIgnoreCompilerControls=true -XX:CompileThreshold=100 -DVerifyIR=false":

      Custom Run Test: @Run: test16_verifier - @Test: test16:
      compiler.lib.ir_framework.shared.TestRunException: There was an error while invoking @Run method public void compiler.valhalla.inlinetypes.TestNullableInlineTypes.test16_verifier() throws java.lang.Exception
      at compiler.lib.ir_framework.test.CustomRunTest.invokeTest(CustomRunTest.java:162)
      at compiler.lib.ir_framework.test.AbstractTest.run(AbstractTest.java:99)
      at compiler.lib.ir_framework.test.CustomRunTest.run(CustomRunTest.java:89)
      at compiler.lib.ir_framework.test.TestVM.runTests(TestVM.java:821)
      at compiler.lib.ir_framework.test.TestVM.start(TestVM.java:249)
      at compiler.lib.ir_framework.test.TestVM.main(TestVM.java:164)
      Caused by: java.lang.reflect.InvocationTargetException
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:119)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at compiler.lib.ir_framework.test.CustomRunTest.invokeTest(CustomRunTest.java:159)
      ... 5 more
      Caused by: java.lang.RuntimeException: assertTrue: expected true, was false
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertTrue(Asserts.java:486)
      at jdk.test.lib.Asserts.assertTrue(Asserts.java:472)
      at compiler.valhalla.inlinetypes.TestNullableInlineTypes.test16_verifier(TestNullableInlineTypes.java:495)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      ... 7 more

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: