8280440: [lworld] Scalarization does not properly handle speculative types